--- a/Backend/package.json
+++ b/Backend/package.json
@@ -31,7 +31,7 @@
     "class-transformer": "^0.4.0",
     "class-validator": "^0.12.2",
     "crypto": "^1.0.1",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "password-hash": "^1.2.2",
